--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,3 @@
-<div class="footer" align="center">
-
-  -----Brew Crew-----
-
-</div>
+<footer class="module color3">
+  &copy; {{ site.author }}<span class="right">Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></span>
+</footer>
