--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,12 @@
 ---
 layout: default
 ---
-<div class="post">
 
-  <header class="post-header">
-     <h1 class="post-title">{{ page.title }}</h1>
-     <p class="post-meta">Posted on {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<article class="color3 module">
+  <a href="{{ page.url }}"><h1>{{ page.title }}</h1></a>
+  <hr>
+  <time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
+  {{ content }}
+</article>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-  <div align="center">
-  	<a href="#">
-  	<i class="fa fa-arrow-circle-up fa-2x"></i>
-  	</a>
-  </div>
-
-</div>
+{% include disqus.html %}
