--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,14 @@
     {{ site.description }}
   </div>
   <nav class="module color4">
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/contact/">Contact</a>
+<!--     <a href="/">Página principal</a>
+ -->    <a href="/calendario/">Calendário</a>
+    <a href="/contact/">Contato</a>
   </nav>
   <div class="module color3">
-    github/{{ site.github }}
-    <br>twitter/{{ site.twitter }}
-    <br>{{ site.email }}
+  <br> Lucía Fernández Montoya
+  <br> Joe Brew
+<!--     <br>twitter/{{ site.twitter }}
+    <br>{{ site.email }} -->
   </div>
 </aside>
