--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>We're not a company. We're just a couple of health researchers.</p>
-                <p>We think that papers and presentations in are field are boring. Which sucks, since they're usually about really cool stuff.</p>
-                <p>We want to create beautiful visualizations and presentations. And we want to share our techniques and discoveries.</p>
+                    <p>
+                    'This app is intended to help researchers to explore the results of the 5 country "Better Work" survey.
+                    '</p>
                 <a href="#exercises" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
