--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">DATA IS</span> BEAUTIFUL
+                    <i class="fa fa-play-circle"></i>  <span class="light">BETTER WORK</span> APP
                 </a>
             </div>
 
