--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,8 +4,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                     <p>
-                    'This app is intended to help researchers to explore the results of the 5 country "Better Work" survey.
-                    '</p>
+                    This app is intended to help researchers to explore the results of the 5 country "Better Work" survey. More details about it will eventually go here.
+                    </p>
                 <a href="#exercises" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
                 </a>
