--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#exercises">Details</a>
+                        <a class="page-scroll" href="#exercises">THE APP</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
