--- a/_includes/sub_nav.html
+++ b/_includes/sub_nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="{{site.url}}">
-                    <i class="fa fa-play-circle"></i>  <span class="light">DATA IS</span> BEAUTIFUL
+                    <i class="fa fa-play-circle"></i>  <span class="light">BETTER WORK</span> APP
                 </a>
             </div>
 
@@ -17,9 +17,9 @@
                     <li class="hidden">
                         <a href="{{site.baseurl}}"></a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a class="page-scroll" href="https://www.youtube.com/">youtube</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
