--- a/_includes/exercises.html
+++ b/_includes/exercises.html
@@ -3,9 +3,9 @@
         <div class="exercises-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Details</h2>
+                    <h2>THE APP</h2>
                     <p>Click below.</p>
-                    <a href="{{site.baseurl}}/details" class="btn btn-default btn-lg">DETAILS</a>
+                    <a href="{{site.baseurl}}/details" class="btn btn-default btn-lg">THE APP</a>
                 </div>
             </div>
             <a href="#contact" class="btn btn-circle page-scroll">
